spring-cloud-stream-kafka/spring-cloud-stream-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-stream-kafka
  labels:
    app: spring-cloud-stream-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-cloud-stream-kafka
  template:
    metadata:
      labels:
        app: spring-cloud-stream-kafka
    spec:
      containers:
      - name: spring-cloud-stream-kafka
        image: rakgenius/spring-cloud-stream-kafka:0.0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-stream-kafka
  labels:
    app: spring-cloud-stream-kafka
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: spring-cloud-stream-kafka
